apps/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: belovr-unified-ingress
  namespace: belovr
  annotations:
    argocd.argoproj.io/healthstatus: "Healthy"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_ssl_server_name on;
      if ($request_uri ~* "^/video") {
          set $proxy_upstream_protocol https;
          proxy_set_header Host cdn.belovr.com;
      }
      if ($request_uri ~* "^/images") {
          set $proxy_upstream_protocol https;
          proxy_set_header Host images.belovr.com;
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts: [dev.192.168.1.12.nip.io]
      secretName: belovr-app-tls-secret
  rules:
    - host: dev.192.168.1.12.nip.io
      http:
        paths:
          # API Mapping
          - path: /api/auth
            pathType: Prefix
            backend: { service: { name: auth-service, port: { number: 3001 } } }
          - path: /api/user
            pathType: Prefix
            backend: { service: { name: user-service, port: { number: 4000 } } }
          - path: /api/content
            pathType: Prefix
            backend:
              { service: { name: content-service, port: { number: 4100 } } }
          - path: /api/chat
            pathType: Prefix
            backend: { service: { name: chat-service, port: { number: 4200 } } }
          - path: /api/social
            pathType: Prefix
            backend:
              { service: { name: social-service, port: { number: 4300 } } }
          - path: /api/payment
            pathType: Prefix
            backend:
              { service: { name: payment-service, port: { number: 4400 } } }
          - path: /api/realtime
            pathType: Prefix
            backend:
              { service: { name: realtime-service, port: { number: 4500 } } }
          - path: /api/ia
            pathType: Prefix
            backend: { service: { name: ia-service, port: { number: 8080 } } }
          # Cloudflare Proxies
          - path: /video
            pathType: Prefix
            backend:
              { service: { name: proxy-cdn-belovr, port: { number: 443 } } }
          - path: /images
            pathType: Prefix
            backend:
              { service: { name: proxy-images-belovr, port: { number: 443 } } }
          # Frontend (Default)
          - path: /
            pathType: Prefix
            backend:
              { service: { name: frontend-service, port: { number: 3000 } } }
